iptables/rules.v4
# Generated by iptables-save v1.6.0 on Tue Dec 25 12:46:13 2018
*mangle
:PREROUTING ACCEPT [34:2153]
:INPUT ACCEPT [34:2153]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [34:4454]
:POSTROUTING ACCEPT [34:4454]
COMMIT
# Completed on Tue Dec 25 12:46:13 2018
# Generated by iptables-save v1.6.0 on Tue Dec 25 12:46:13 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [5:350]
:POSTROUTING ACCEPT [5:350]
COMMIT
# Completed on Tue Dec 25 12:46:13 2018
# Generated by iptables-save v1.6.0 on Tue Dec 25 12:46:13 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [26:3510]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 193.191.177.6/32 -j ACCEPT
-A INPUT -s 193.191.177.1/32 -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 127.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 25,53,80,443,587,993,5601,8080,22345 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
# Completed on Tue Dec 25 12:46:13 2018
